--- a/src/pages/company/index.astro
+++ b/src/pages/company/index.astro
@@ -142,7 +142,7 @@ const sections = [
                         </div>
                         <div class="testimonial-content-block">
                             <h3 class="testimonial-author-name font-bold">Kuldeep Sharma</h3>
-                            <div class="testimonial-designation-text font-bold text-[#8D8D9B]">Project manager</div>
+                            <div class="testimonial-designation-text font-bold text-[#8D8D9B]">Founder , CEO</div>
                         </div>
                     </div>
                     <div class="testimonial-single-card-block">
@@ -160,7 +160,7 @@ const sections = [
                         </div>
                         <div class="testimonial-content-block">
                             <h3 class="testimonial-author-name font-bold">Vishwa M</h3>
-                            <div class="testimonial-designation-text font-bold text-[#8D8D9B]">Brand Designer</div>
+                            <div class="testimonial-designation-text font-bold text-[#8D8D9B]">Managing Director</div>
                         </div>
                     </div>
                     <!-- <div class="testimonial-single-card-block">
@@ -196,41 +196,41 @@ const sections = [
                 <div class="w-full grid grid-cols-3 gap-4 px-4 lg:hidden">
                     <div class="testimonial-single-card-block-mobile">
                         <div class="testimonial-image-block-mobile">
-                            <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0b2e9f8328911bfe1_loren.png" 
+                            <img src={KuldeepImage.src}
                                  loading="lazy" 
                                  alt="" 
                                  class="testimonial-image-mobile">
                         </div>
                         <div class="testimonial-content-block-mobile">
-                            <h3 class="testimonial-author-name-mobile font-bold">Loren</h3>
-                            <div class="testimonial-designation-text-mobile font-bold text-[#8D8D9B]">PM</div>
+                            <h3 class="testimonial-author-name-mobile font-bold">Kuldeep Sharma</h3>
+                            <div class="testimonial-designation-text-mobile font-bold text-[#8D8D9B]">Project manager</div>
                         </div>
                     </div>
                     <div class="testimonial-single-card-block-mobile">
                         <div class="testimonial-image-block-mobile">
-                            <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d0cad94a1b82e31b6a_david.png" 
+                            <img src={PradeepImage.src}
                                  loading="lazy" 
                                  alt="" 
                                  class="testimonial-image-mobile">
                         </div>
                         <div class="testimonial-content-block-mobile">
-                            <h3 class="testimonial-author-name-mobile font-bold">David</h3>
-                            <div class="testimonial-designation-text-mobile font-bold text-[#8D8D9B]">UX</div>
+                            <h3 class="testimonial-author-name-mobile font-bold">Pradeep J</h3>
+                            <div class="testimonial-designation-text-mobile font-bold text-[#8D8D9B]">VP Sales & Service</div>
                         </div>
                     </div>
                     <div class="testimonial-single-card-block-mobile">
                         <div class="testimonial-image-block-mobile">
-                            <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d080115bb772af2a6c_helena.png" 
+                            <img src={VishwaImage.src}
                                  loading="lazy" 
                                  alt="" 
                                  class="testimonial-image-mobile">
                         </div>
                         <div class="testimonial-content-block-mobile">
-                            <h3 class="testimonial-author-name-mobile font-bold">Helena</h3>
-                            <div class="testimonial-designation-text-mobile font-bold text-[#8D8D9B]">Brand</div>
+                            <h3 class="testimonial-author-name-mobile font-bold">Vishwa M</h3>
+                            <div class="testimonial-designation-text-mobile font-bold text-[#8D8D9B]">Managing Director</div>
                         </div>
                     </div>
-                    <div class="testimonial-single-card-block-mobile">
+                    <!-- <div class="testimonial-single-card-block-mobile">
                         <div class="testimonial-image-block-mobile">
                             <img src="https://cdn.prod.website-files.com/668442316cf533d9ea640fb0/66ed52d06fbefee4ba36d54e_nizam.png" 
                                  loading="lazy" 
@@ -265,7 +265,7 @@ const sections = [
                             <h3 class="testimonial-author-name-mobile font-bold">Tom</h3>
                             <div class="testimonial-designation-text-mobile font-bold text-[#8D8D9B]">CEO</div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
