--- a/src/components/BrandFeatures.astro
+++ b/src/components/BrandFeatures.astro
@@ -20,10 +20,11 @@ const brandingFeatures = [
         description: "Experience real-time monitoring and secure automation with our advanced integration capabilities.",
         features: [
                 "Bulk and automated management of objects in Genesys cloud",
-            "Management of Language, Call Routing, Emergency Groups, Schedule Management, Production Prompts",
-            "Additional features include secure role-based access, End to end encryption, Admin dashboard, AD Authentication",
-            "Inbuilt support for SSO, MFA, AD, User Configuration and Activity reporting",
-            "GDPR compliant",
+                "Support for User, Role, Division, Queue, Skills and many more critical objects",
+                "Management of Language, Call Routing, Emergency Groups, Schedule Management, Production Prompts",
+                "Additional features include secure role-based access, End to end encryption, Admin dashboard, AD Authentication",
+                "Inbuilt support for SSO, MFA, AD, User Configuration and Activity reporting",
+                "GDPR compliant",
             "Platform Uptime status and monitoring",
             "Dashboard and reporting, Nexa workspace Management",
             "Help documentation"
