--- a/src/components/Pricing.astro
+++ b/src/components/Pricing.astro
@@ -184,10 +184,10 @@ const serializedProFeatures = JSON.stringify(proFeatures);
                     
                     <!-- Add new trial details section -->
                     <div class="w-full mt-auto pt-8 border-t border-gray-200">
-                        <p class="text-sm text-black font-semibold mb-3">Free Trial includes 07 days free access</p>
-                        <p class="text-sm text-black font-semibold mb-3">2 users' activation</p>
-                        <p class="text-sm text-black font-semibold mb-3">API rate limits and restrictions may apply during Free Trial *</p>
-                        <p class="text-sm text-black font-semibold">One time product activation fee will only be applicable upon activation of monthly subscription</p>
+                        <p class="text-md text-black font-semibold mb-3">Free Trial includes 07 days free access</p>
+                        <p class="text-md text-black font-semibold mb-3">2 users' activation</p>
+                        <p class="text-md text-black font-semibold mb-3">API rate limits and restrictions may apply during Free Trial *</p>
+                        <p class="text-md text-black font-semibold">One time product activation fee will only be applicable upon activation of monthly subscription</p>
                     </div>
                 </div>
             </div>
