--- a/src/components/marquee.astro
+++ b/src/components/marquee.astro
@@ -1,91 +1,38 @@
-<!-- ---
-
----
-
-<div class="marquee-container">
-    <div class="marquee" id="marquee">
-      {[...Array(2)].map(() => (
-        <div class="marquee-content">
-          {['Astro', 'GSAP', 'Marquee', 'Animation'].map((word) => (
-            <div class="word-container">
-              <span>{word}</span>
-              <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M10 19l-7-7m0 0l7-7m-7 7h18" />
-              </svg>
-            </div>
-          ))}
-        </div>
-      ))}
-    </div>
-  </div>
-  
-  <script>
-    import { gsap } from 'gsap';
-  
-    const marquee = document.getElementById('marquee');
-    const arrows = document.querySelectorAll('.arrow');
-  
-    if (marquee) {
-      gsap.to(marquee, {
-        x: '-50%',
-        ease: 'none',
-        duration: 20,
-        repeat: -1,
-      });
-  
-      marquee.addEventListener('mouseenter', () => {
-        gsap.to(arrows, {
-          rotation: 180,
-          duration: 0.3,
-          ease: 'power2.out',
-        });
-      });
-  
-      marquee.addEventListener('mouseleave', () => {
-        gsap.to(arrows, {
-          rotation: 0,
-          duration: 0.3,
-          ease: 'power2.out',
-        });
-      });
-    }
-  </script>
-  
-  <style>
-    .marquee-container {
-      overflow: hidden;
-      background-color: #f3f4f6;
-      padding: 1rem 0;
-    }
-  
-    .marquee {
-      display: flex;
-      white-space: nowrap;
-      width: fit-content;
-    }
-  
-    .marquee-content {
-      display: flex;
-    }
-  
-    .word-container {
-      display: flex;
-      align-items: center;
-      margin: 0 1rem;
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-  
-    .arrow {
-      width: 1.5rem;
-      height: 1.5rem;
-      margin-left: 0.5rem;
-    }
-  </style> -->
 
   ---
   
-  const images = ['Astro', 'GSAP', 'Marquee', 'Animation'];
+  const images = [
+    {
+      image: '/assets/aws.png',
+    },
+    {
+      image: '/assets/genesys.png',
+    }    ,
+    {
+      image: '/assets/microsoft.png',
+    },
+    {
+      image: '/assets/Deutsche.png',
+    },
+    {
+      image: '/assets/monzo.png',
+    },
+    {
+      image: '/assets/stripe.png',
+    },
+    {
+      image: '/assets/cloudanalogy.png',
+    },
+    {
+      image:'/assets/twilio.png',
+    },
+    {
+      image:'/assets/adobe2.png',
+    },
+    {
+      image:'/assets/cxguru2.avif',
+    }
+  ];
   const repetitions = 4;
   ---
   
@@ -97,7 +44,7 @@
         <div class="marquee-content">
           {images.map((image) => (
             <div class="word-container text-black">
-              <img src={image} alt="Marquee Image" />
+              <img src={image.image} alt="Marquee Image" />
               <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M10 19l-7-7m0 0l7-7m-7 7h18" />
               </svg>
@@ -125,7 +72,7 @@
       const tl = gsap.timeline({ repeat: -1 });
       tl.to(marquee, {
         x: -contentWidth,
-        duration: 6,
+        duration: 12,
         ease: 'linear',
         onComplete: () => {
           gsap.set(marquee, { x: 0 });
@@ -158,8 +105,29 @@
       font-family: 'new';
       font-weight: 800;
       font-stretch: 450%;
-      height: 18rem;
-      /* box-shadow: 0px 5px 9px 2px gray; */
+      height: 22rem;
+      position: relative;
+    }
+  
+    .marquee-container::before,
+    .marquee-container::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      width: 25%;
+      height: 100%;
+      z-index: 2;
+      pointer-events: none;
+    }
+  
+    .marquee-container::before {
+      left: 0;
+      background: linear-gradient(to right, #E7E7D6 0%, transparent 100%);
+    }
+  
+    .marquee-container::after {
+      right: 0;
+      background: linear-gradient(to left, #E7E7D6 0%, transparent 100%);
     }
   
     .marquee {
@@ -177,145 +145,21 @@
     .word-container {
       display: flex;
       align-items: center;
-      margin: 0 1rem;
+      margin: 0 3rem;
       font-size: 1.5rem;
       font-weight: bold;
     }
   
+    .word-container img {
+      width: auto;
+      height: 5rem;
+      object-fit: contain;
+    }
+  
     .arrow {
-      width: 1.5rem;
-      height: 1.5rem;
-      margin-left: 0.5rem;
+      width: 4rem;
+      height: 0rem;
+      /* margin-left: 0.5rem; */
     }
   </style>
 
-  <!-- ---
-// File: src/components/AngledMarquees.astro
-
-const words = ['Astro', 'GSAP', 'Marquee', 'Animation'];
-const repetitions = 4; // Number of times to repeat the word set
-const marqueeCount = 3; // Number of marquees to create
----
-
-<div class="marquees-container">
-  {[...Array(marqueeCount)].map((_, index) => (
-    <div class="marquee-wrapper" style={`transform: rotate(${index * 5 - 5}deg);`}>
-      <div class="marquee-container">
-        <div class="marquee" id={`marquee-${index}`}>
-          {[...Array(repetitions)].map(() => (
-            <div class="marquee-content">
-              {words.map((word) => (
-                <div class="word-container">
-                  <span>{word}</span>
-                  <svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M10 19l-7-7m0 0l7-7m-7 7h18" />
-                  </svg>
-                </div>
-              ))}
-            </div>
-          ))}
-        </div>
-      </div>
-    </div>
-  ))}
-</div>
-
-<script>
-  import { gsap } from 'gsap';
-
-  const marqueeCount = 3; // Make sure this matches the marqueeCount in the component
-
-  for (let i = 0; i < marqueeCount; i++) {
-    const marquee = document.getElementById(`marquee-${i}`);
-    const arrows = marquee.querySelectorAll('.arrow');
-    const marqueeContent = marquee.querySelector('.marquee-content');
-
-    if (marquee && marqueeContent) {
-    const contentWidth = (marqueeContent as HTMLElement).offsetWidth; 
-
-      gsap.set(marquee, { x: 0 });
-
-      const tl = gsap.timeline({ repeat: -1 });
-      tl.to(marquee, {
-        x: -contentWidth,
-        duration: 15 + i * 5, // Different speed for each marquee
-        ease: 'linear',
-        onComplete: () => {
-          gsap.set(marquee, { x: 0 });
-        }
-      });
-
-      marquee.addEventListener('mouseenter', () => {
-        gsap.to(arrows, {
-          rotation: 180,
-          duration: 0.3,
-          ease: 'power2.out',
-        });
-      });
-
-      marquee.addEventListener('mouseleave', () => {
-        gsap.to(arrows, {
-          rotation: 0,
-          duration: 0.3,
-          ease: 'power2.out',
-        });
-      });
-    }
-  }
-</script>
-
-<style>
-  .marquees-container {
-    position: relative;
-    height: 100vh;
-    overflow: hidden;
-    background-color: #f3f4f6;
-  }
-
-  .marquee-wrapper {
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: 60px;
-  }
-
-  .marquee-container {
-    overflow: hidden;
-    padding: 1rem 0;
-  }
-
-  .marquee {
-    display: flex;
-    white-space: nowrap;
-  }
-
-  .marquee-content {
-    display: flex;
-  }
-
-  .word-container {
-    display: flex;
-    align-items: center;
-    margin: 0 1rem;
-    font-size: 1.5rem;
-    font-weight: bold;
-  }
-
-  .arrow {
-    width: 1.5rem;
-    height: 1.5rem;
-    margin-left: 0.5rem;
-  }
-
-  .marquee-wrapper:nth-child(1) {
-    top: 20%;
-  }
-
-  .marquee-wrapper:nth-child(2) {
-    top: 50%;
-  }
-
-  .marquee-wrapper:nth-child(3) {
-    top: 80%;
-  }
-</style> -->
